--- a/crontab.yaml
+++ b/crontab.yaml
@@ -1,5 +1,5 @@
 jobs:
   - name: generate-cache
-    command: python /app/resources/cache_handler.py
+    command: python /app/cache_handler.py
     schedule: "0 */2 * * *"
     #schedule: "@reboot"
