--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ SECRETS.txt
 trails
 notes
 HSMFS
-resources/hsm_drive.pkl
+resources/hsm_chunk_dir
+resources/hsm_chunk_index.pkl
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
