--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ dash==2.11.1
 dash-ag-grid==2.3.0
 dash-bootstrap-components==1.4.2
 dash-bootstrap-templates==1.0.8
+dash-mantine-components==0.12.1
 python-gitlab==3.15.0
-PyYAML
+PyYAML==6.0.1
