feat: add fluorescence flag to further options and update related templates

--- a/tests/data/dashboard_dcevent_defaults.yaml
+++ b/tests/data/dashboard_dcevent_defaults.yaml
@@ -131,6 +131,8 @@ norm_gate:
 further_options:
   reproduce:
     default: "False"
+  fluorescence:
+    default: "False"
   num_frames:
     default: 10000
     step: 100
