--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,48 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: RaghavaAlajangi/HPC_Pipeline_Dashboard
+
+  docker:
+    name: Build and Push Docker Images
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Extract metadata
+        id: meta
+        run: |
+          echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      
+      - name: Build and push main dashboard image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/hpc-pipeline-dashboard:latest
+            ${{ secrets.DOCKER_USERNAME }}/hpc-pipeline-dashboard:${{ steps.meta.outputs.short_sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/hpc-pipeline-dashboard:latest
+          cache-to: type=inline
+      
+      - name: Build and push cron image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          target: cron
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/hpc-pipeline-dashboard-cron:latest
+            ${{ secrets.DOCKER_USERNAME }}/hpc-pipeline-dashboard-cron:${{ steps.meta.outputs.short_sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/hpc-pipeline-dashboard-cron:latest
+          cache-to: type=inline
